--- a/css/act.css
+++ b/css/act.css
@@ -3,26 +3,19 @@ body{
 }
 
 /* Haut de page */
-header h1.head1{
+header h1{
 	font-size: 55px;
 	text-align: center;
 }
-header h4.head4{
+header h4{
 	font-size: 25px;
 	text-align: center;
 }
-header h4.head4 a.sta{
-	color: black;
-}
-header h4.head4 a.sta:hover{
-	color: #C490DF;
-}
-
 
 /* Boutons nav */
 nav.menu-nav{
 	text-align: center;
-	padding-top: 50px;
+	padding-top: 40px;
 	padding-right: 50px;
 	padding-bottom: 50px;
 }
@@ -47,6 +40,10 @@ nav.menu-nav ul li.btn:hover a{
 /* Contenue de la page */
 body{
 	text-align: center;
+}
+h2{
+	padding-top: 30px;
+	padding-bottom: 30px;
 }
 h2.travaux{
 	margin-top: 100px;
