--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,12 @@ div#content p.paroles2{
 	text-align: center;
 	font-weight: bold;
 }
+div#content p.paroles3{
+	font-size: 14.7px;
+	text-align: center;
+	font-weight: bold;
+	padding-bottom: 375px;
+}
 div#content div.left{
 	background-color: #FEFCFF;
 	text-align: center;
@@ -78,8 +84,12 @@ div#content div.left h2{
 	font-size: 45px;
 	text-shadow: 2px 2px 6px purple;
 }
+div#content div.left span{
+	padding-top: 600px;
+	font-size: 45px;
+	text-shadow: 2px 2px 6px purple;
+}
 div#content div.right h2{
-	padding-top: 400px;
 	font-size: 45px;
 	text-shadow: 2px 2px 6px purple;
 }
